# ggml-stack

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
src/ggml_stack/: __init__.py  __main__.py  builders.py  project.py  recipe.py  shell.py
tests/: test_recipe.py
