[project]
name = "ggml-stack"
version = "0.1.1"
description = "Shared single-ggml build recipe for llama.cpp + whisper.cpp + stable-diffusion.cpp"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.scripts]
ggml-stack = "ggml_stack.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ggml_stack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
